[gd_scene load_steps=2 format=4 uid="uid://cj3p8x1dqh0e7"]

[ext_resource type="Script" path="res://Controllers/SessionController/UI/PartyItem.gd" id="1_party_item"]

[node name="PartyItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_party_item")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.25, 0.3, 0.35, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PartyNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 20
text = "Robot Party 1"

[node name="RemoveButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderRow"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "Remove"

[node name="ConfigRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RobotCountLabel" type="Label" parent="MarginContainer/VBoxContainer/ConfigRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Robot Count:"
vertical_alignment = 1

[node name="RobotCountSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/ConfigRow"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
min_value = 1.0
max_value = 100.0
value = 1.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderRow/RemoveButton" to="." method="_on_remove_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/ConfigRow/RobotCountSpinBox" to="." method="_on_robot_count_changed"]
